--- a/cards/templates/cards/card_list.html
+++ b/cards/templates/cards/card_list.html
@@ -1,13 +1,13 @@
 {% extends "cards/base.html" %}
-
+{% load humanize %}
 {% block content %}
-    <h2>
-        All Cards
-    </h2>
-    {% for card in card_list %}
-        <h3>🗃 {{ card.box }} Box</h3>
-        <article>
-            {{ card }}
-        </article>
-    {% endfor %}
+<h2>
+    All Cards
+</h2>
+{% for card in card_list %}
+{% ifchanged %}
+<h3>🗃 {{ card.box | ordinal }} Box</h3>
+{% endifchanged %}
+{% include "cards/card.html" %}
+{% endfor %}
 {% endblock content %}
