--- a/cards/templates/cards/base.html
+++ b/cards/templates/cards/base.html
@@ -54,6 +54,7 @@
 <body>
     <header>
         <h1>Flashcards App</h1>
+        {% include "cards/navigation.html" %}
     </header>
     <main>
         {% block content %}
